--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Vatican Council (1st : 1869-1870 : Basilica di San Pietro in Vaticano)'
 - !lcc 'BX'
 - !lcsh 'Popes -- Infallibility'
+- GITenberg
 title: Letters From Rome on the Council
 url: http://www.gutenberg.org/ebooks/38116
